sysyruntimelibrary-master/functional_test/28_while_test2.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/28_while_test2.sy:30:20: error: syntax error, unexpected R_PARENTHESIS
30|   return FourWhile()
  |                     ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/28_while_test2.sy:0:0: error: not find main function
